--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 astroid==3.0.2
+cfgv==3.4.0
 colorama==0.4.6
 dill==0.3.8
+distlib==0.3.8
+filelock==3.13.1
 flake8==7.0.0
+identify==2.5.33
 isort==5.13.2
 mccabe==0.7.0
+nodeenv==1.8.0
 platformdirs==4.1.0
+pre-commit==3.6.0
+prettytable==3.9.0
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+PyYAML==6.0.1
 tomli==2.0.1
 tomlkit==0.12.3
 typing_extensions==4.9.0
+virtualenv==20.25.0
+wcwidth==0.2.13
