--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,7 +18,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Analysing the code with pylint and flake8
+    - name: Check pylint
       run: |
         pylint $(git ls-files '*.py')
+    - name: Check flake8
+      run: |
         flake8 $(git ls-files '*.py')
+    
